--- a/app/src/main/res/layout/fragment_lab.xml
+++ b/app/src/main/res/layout/fragment_lab.xml
@@ -24,28 +24,22 @@
     </androidx.appcompat.widget.Toolbar>
 
 
-    <com.example.myapplication.RecyclerViewAtViewPager2
-        android:id="@+id/recyclerView"
+    <com.example.myapplication.widget.RecyclerViewAtViewPager2
+        android:id="@+id/rvLab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.example.myapplication.recharge.view.ScratchCardViewGroup
+        android:id="@+id/scratchCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/shape_rectangle5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView">
-
-        <com.example.myapplication.recharge.widget.ScratchCardView
-            android:id="@+id/cl6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/shape_rectangle5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rvLab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
