--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/beam"
+        android:id="@+id/ivBeam"
         android:layout_width="900dp"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,7 +17,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/card"
+        android:id="@+id/ivCard"
         android:layout_width="97dp"
         android:layout_height="98dp"
         android:scaleType="fitCenter"
@@ -28,47 +28,47 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/card3"
+        android:id="@+id/ivFlipPageClose"
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_marginTop="115dp"
         android:scaleType="fitCenter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card" />
+        app:layout_constraintTop_toBottomOf="@id/ivCard" />
 
     <ImageView
-        android:id="@+id/card4"
+        android:id="@+id/ivFlipPagePrise"
         android:layout_width="match_parent"
         android:layout_height="84dp"
         android:layout_marginBottom="122dp"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@id/card3"
+        app:layout_constraintBottom_toTopOf="@id/ivFlipPageClose"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:id="@+id/card5"
+        android:id="@+id/ivFlipPageCloseButton"
         android:layout_width="160dp"
         android:layout_height="55dp"
         android:layout_marginBottom="58dp"
-        app:layout_constraintBottom_toTopOf="@id/card3"
+        app:layout_constraintBottom_toTopOf="@id/ivFlipPageClose"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:id="@+id/card6"
+        android:id="@+id/ivFlipPageHint"
         android:layout_width="104dp"
         android:layout_height="12dp"
         android:layout_marginBottom="30dp"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@id/card3"
+        app:layout_constraintBottom_toTopOf="@id/ivFlipPageClose"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
 
     <ImageView
-        android:id="@+id/bottom"
+        android:id="@+id/ivFlipPageButtom"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/cheer"
