--- a/app/src/main/res/layout/activity_return_page.xml
+++ b/app/src/main/res/layout/activity_return_page.xml
@@ -5,11 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="300dp"
         android:layout_height="180dp"
@@ -20,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/tv2Image"
+            android:id="@+id/imClose"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginTop="10dp"
@@ -40,7 +35,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/text1"
+            android:id="@+id/tvAbandon"
             android:layout_width="130dp"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
@@ -50,10 +45,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/text2" />
+            app:layout_constraintRight_toLeftOf="@id/tvContinue" />
 
         <TextView
-            android:id="@+id/text2"
+            android:id="@+id/tvContinue"
             android:layout_width="130dp"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
@@ -62,7 +57,7 @@
             android:text="继续充值"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/text1"
+            app:layout_constraintLeft_toRightOf="@id/tvAbandon"
             app:layout_constraintRight_toRightOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
