--- a/app/src/main/res/layout/fragment_helper.xml
+++ b/app/src/main/res/layout/fragment_helper.xml
@@ -26,7 +26,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvHelper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
