--- a/app/src/main/res/layout/view_group_custom_scratch_card.xml
+++ b/app/src/main/res/layout/view_group_custom_scratch_card.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl4"
+        android:id="@+id/clflipCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle5"
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/cl4Tv7"
+            android:id="@+id/tvFlipCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="13dp"
@@ -34,9 +34,9 @@
             android:text="累计剩余3次"
             android:textColor="#999999"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@id/cl4Tv7"
-            app:layout_constraintLeft_toRightOf="@id/cl4Tv7"
-            app:layout_constraintTop_toTopOf="@id/cl4Tv7" />
+            app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
+            app:layout_constraintLeft_toRightOf="@id/tvFlipCard"
+            app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
 
         <ImageView
             android:id="@+id/cl3Im2"
@@ -44,21 +44,21 @@
             android:layout_height="14dp"
             android:layout_marginRight="3dp"
             android:src="@drawable/refresh"
-            app:layout_constraintBottom_toBottomOf="@id/cl4Tv7"
-            app:layout_constraintRight_toLeftOf="@id/cl4Tv9"
-            app:layout_constraintTop_toTopOf="@id/cl4Tv7" />
+            app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
+            app:layout_constraintRight_toLeftOf="@id/tvFlipCardChange"
+            app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
 
         <TextView
-            android:id="@+id/cl4Tv9"
+            android:id="@+id/tvFlipCardChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:text="再刮一次"
             android:textColor="#999999"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@id/cl4Tv7"
+            app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/cl4Tv7" />
+            app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container"
@@ -70,9 +70,7 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7">
-
-
+            app:layout_constraintTop_toBottomOf="@id/tvFlipCard">
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -85,7 +83,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7">
+            app:layout_constraintTop_toBottomOf="@id/tvFlipCard">
 
             <ImageView
                 android:id="@+id/imageHand"
