--- a/app/src/main/res/layout/view_group_custom_title_bar.xml
+++ b/app/src/main/res/layout/view_group_custom_title_bar.xml
@@ -7,14 +7,14 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/ivLeft"
         android:layout_width="9dp"
         android:layout_height="15dp"
         android:layout_centerVertical="true"
         android:src="@drawable/back" />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/tvTitleBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -23,7 +23,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/rightText"
+        android:id="@+id/tvRightBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -33,7 +33,7 @@
         android:textSize="16sp" />
 
     <ImageView
-        android:id="@+id/image2"
+        android:id="@+id/ivRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
