--- a/app/src/main/res/layout/activity_feed_stream_home_page.xml
+++ b/app/src/main/res/layout/activity_feed_stream_home_page.xml
@@ -5,24 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#0097ff"></androidx.appcompat.widget.Toolbar>
+        android:layout_height="80dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal" />
-
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
@@ -31,8 +22,17 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/Theme.AppCompat"
             app:tabIndicatorHeight="0dp"
+            app:tabIndicator="@drawable/shape_tab_indicator"
+            app:tabIndicatorColor="@color/purple_500"
             app:tabMaxWidth="200dp"
             app:tabMinWidth="100dp"
             app:tabMode="fixed" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal" />
     </LinearLayout>
 </LinearLayout>
