--- a/app/src/main/res/layout/activity_feed_stream_home_page.xml
+++ b/app/src/main/res/layout/activity_feed_stream_home_page.xml
@@ -18,15 +18,17 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_rectangle6"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/Theme.AppCompat"
-            app:tabIndicatorHeight="0dp"
+            android:background="@color/white"
+            app:tabIndicatorHeight="5dp"
+            app:tabIndicatorFullWidth="false"
             app:tabIndicator="@drawable/shape_tab_indicator"
-            app:tabIndicatorColor="@color/purple_500"
+            app:tabIndicatorColor="@color/black"
             app:tabMaxWidth="200dp"
             app:tabMinWidth="100dp"
-            app:tabMode="fixed" />
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/purple_700"
+            app:tabTextColor="@color/red"
+            />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager2"
