--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -588,7 +588,7 @@
                 app:layout_constraintTop_toBottomOf="@id/rechargeFlipCard" />
 
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/llWaterfall"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -601,7 +601,7 @@
                     android:id="@+id/tabLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/shape_rectangle6"
+                    android:background="@drawable/shape_recharge_tab_rectangle"
                     android:minHeight="?attr/actionBarSize"
                     android:theme="@style/Theme.AppCompat"
                     app:tabIndicatorHeight="4dp"
@@ -611,6 +611,8 @@
                     app:tabMaxWidth="200dp"
                     app:tabMinWidth="50dp"
                     app:tabMode="scrollable"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     />
 
                 <androidx.viewpager2.widget.ViewPager2
@@ -618,8 +620,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal" />
-            </LinearLayout>
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/tabLayout"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <!--<androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvWaterfall"
                 android:layout_width="match_parent"
