--- a/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
+++ b/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
@@ -6,17 +6,54 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/tabIcon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tabName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <TextView
-        android:id="@+id/tabTitle"
+        android:id="@+id/tabName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#111111"
         android:textSize="17sp"
         android:gravity="start"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="555"
+        app:layout_constraintTop_toBottomOf="@id/tabIcon"
+        app:layout_constraintBottom_toTopOf="@id/subTitle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/subTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#111111"
+        android:textSize="8sp"
+        android:gravity="start"
+        android:text="555"
+        app:layout_constraintTop_toBottomOf="@id/tabName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/redFlag"
+        android:layout_width="7dp"
+        android:layout_height="7dp"
+        android:layout_marginBottom="-5dp"
+        android:layout_marginLeft="-2dp"
+        android:src="@drawable/recharge_tab_red_dot"
+        app:layout_constraintBottom_toTopOf="@id/tabName"
+        app:layout_constraintLeft_toRightOf="@id/tabName"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
