--- a/app/src/main/res/layout/widget_multiple_item_many_image.xml
+++ b/app/src/main/res/layout/widget_multiple_item_many_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="161dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="4dp"
@@ -64,12 +64,11 @@
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/falls1"
         app:layout_constraintLeft_toRightOf="@id/ivPicAreaImageUrl3"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl2"
+        app:layout_constraintTop_toTopOf="@id/ivPicAreaImageUrl3"
         />
 
     <TextView
@@ -105,7 +104,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvMainTitleTitle" />
 
     <TextView
-        android:id="@+id/tvSaleTipListCopy"
+        android:id="@+id/tvSaleTipListSecond"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginLeft="5dp"
