--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
@@ -10,150 +11,199 @@
 
     <ImageView
         android:id="@+id/ivPicAreaImageUrl"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:src="@drawable/falls1"
         app:layout_constraintBottom_toTopOf="@id/tvMainTitleTitle"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvStockout"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_weight="1"
-        android:gravity="center"
         android:layout_marginRight="9dp"
         android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:background="@drawable/shape_recharge_commentlist"
+        android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:background="@drawable/shape_recharge_commentlist"
         android:text="无货"
         android:textColor="#fff8f6"
         android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivPicAreaImageUrl"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/tvCommentList"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_weight="1"
-        android:gravity="center"
         android:layout_marginRight="9dp"
         android:layout_marginBottom="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/shape_recharge_commentlist"
+        android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:background="@drawable/shape_recharge_commentlist"
         android:text="操作简单"
         android:textColor="#fff8f6"
         android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@id/tvStockout"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/tvCommentListSecond"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:layout_marginBottom="5dp"
         android:layout_marginRight="9dp"
+        android:layout_marginBottom="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/shape_recharge_commentlist_second"
+        android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:background="@drawable/shape_recharge_commentlist_second"
         android:text="库存紧张"
         android:textColor="#fff8f6"
         android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@id/tvCommentList"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListFirst"
-        android:layout_width="110dp"
-        android:layout_height="28dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:visibility="gone"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="11dp"
         android:src="@drawable/label"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListSecond"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
+        app:layout_constraintTop_toBottomOf="@id/tvPriceDecimal" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListSecond"
-        android:layout_width="110dp"
-        android:layout_height="28dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:visibility="gone"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="11dp"
-        android:src="@drawable/label"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListThird"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListFirst" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListThird"
-        android:layout_width="110dp"
-        android:layout_height="28dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:visibility="gone"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="11dp"
         android:src="@drawable/label"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListFourth"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListSecond" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListFourth"
-        android:layout_width="110dp"
-        android:layout_height="28dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:visibility="gone"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="11dp"
         android:src="@drawable/label"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListFifth"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListThird" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListFifth"
-        android:layout_width="110dp"
-        android:layout_height="28dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/label"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListDoubleIssueFee"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListFourth" />
+
+    <ImageView
+        android:id="@+id/ivContentAreaListPicListDoubleIssueFee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:visibility="gone"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="11dp"
-        android:src="@drawable/label"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/issue_fee"
+        app:layout_constraintBottom_toTopOf="@id/tvContentAreaListPicListDoubleIssueFee"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListFourth" />
+        app:layout_constraintRight_toLeftOf="@id/ivContentAreaListPicListDoubleDrawALottery"
+        app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListFifth" />
+
+    <ImageView
+        android:id="@+id/ivContentAreaListPicListDoubleDrawALottery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:src="@drawable/draw_a_lottery"
+        app:layout_constraintBottom_toBottomOf="@id/ivContentAreaListPicListDoubleIssueFee"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/ivContentAreaListPicListDoubleIssueFee"
+        />
+
+    <TextView
+        android:id="@+id/tvContentAreaListPicListDoubleIssueFee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:layout_marginTop="7dp"
+        android:text="领话费"
+        android:textColor="#333333"
+        android:visibility="gone"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/ivContentAreaListPicListDoubleIssueFee"
+        app:layout_constraintRight_toRightOf="@id/ivContentAreaListPicListDoubleIssueFee"
+        app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListDoubleIssueFee" />
+
+    <TextView
+        android:id="@+id/tvContentAreaListPicListDoubleDrawALottery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="领话费"
+        android:textColor="#333333"
+        android:visibility="gone"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/tvContentAreaListPicListDoubleIssueFee"
+        app:layout_constraintLeft_toLeftOf="@id/ivContentAreaListPicListDoubleDrawALottery"
+        app:layout_constraintRight_toRightOf="@id/ivContentAreaListPicListDoubleDrawALottery" />
 
     <TextView
         android:id="@+id/tvMainTitleTitle"
         android:layout_width="136dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginBottom="9dp"
         android:textColor="#333333"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/horizontalScrollView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
@@ -162,13 +212,13 @@
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="10dp"
         android:scrollbarSize="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/tvPriceDecimal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMainTitleTitle"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="11dp"
-        >
+        app:layout_constraintTop_toBottomOf="@id/tvMainTitleTitle">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -176,8 +226,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <!-- 在这里添加您希望横向滑动的内容 -->
             <TextView
@@ -185,17 +234,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
                 android:layout_weight="1"
+                android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:gravity="center"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:text="赠新人礼包"
                 android:textColor="#5faef7"
                 android:textSize="11sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/tvSaleTipListSecond"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvSaleTipListSecond"
@@ -203,16 +253,17 @@
                 android:layout_height="19dp"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:gravity="center"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="赠美团神券"
-                android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:textColor="#5faef7"
                 android:textSize="11sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/tvSaleTipList"
-                app:layout_constraintRight_toLeftOf="@id/tvSaleTipListThird"
-                app:layout_constraintLeft_toRightOf="@id/tvSaleTipList" />
+                app:layout_constraintLeft_toRightOf="@id/tvSaleTipList"
+                app:layout_constraintRight_toLeftOf="@id/tvSaleTipListThird" />
 
             <TextView
                 android:id="@+id/tvSaleTipListThird"
@@ -220,13 +271,15 @@
                 android:layout_height="19dp"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:gravity="center"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="赠美团神券"
-                android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:textColor="#5faef7"
+
                 android:textSize="11sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/tvSaleTipList"
                 app:layout_constraintLeft_toRightOf="@id/tvSaleTipListSecond" />
 
@@ -240,6 +293,7 @@
         android:text="￥"
         android:textColor="#ea5858"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBaseline_toBaselineOf="@id/tvPriceDecimal"
         app:layout_constraintLeft_toLeftOf="@id/tvMainTitleTitle" />
 
@@ -251,9 +305,9 @@
         android:textColor="#ea5858"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvPriceDecimal"
-        app:layout_constraintLeft_toRightOf="@id/tvDollar"
-        />
+        app:layout_constraintLeft_toRightOf="@id/tvDollar" />
 
     <TextView
         android:id="@+id/tvPriceDecimal"
@@ -263,22 +317,20 @@
         android:text="/月"
         android:textColor="#ea5858"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListFirst"
         app:layout_constraintLeft_toRightOf="@id/tvPriceInteger"
-        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
-        />
+        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
 
     <TextView
         android:id="@+id/tvOriginalPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
         android:layout_marginLeft="58dp"
         android:textColor="#999999"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/tvPriceInteger"
-        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
-        />
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/tvPriceDecimal"
+        app:layout_constraintLeft_toRightOf="@id/tvPriceInteger" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
