advertise+ RECHARGE +NULL

--- a/app/src/main/res/layout/widget_multiple_item_many_image.xml
+++ b/app/src/main/res/layout/widget_multiple_item_many_image.xml
@@ -95,6 +95,7 @@
         android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:visibility="gone"
         android:background="@drawable/shape_rectangle18"
         android:text="赠新人礼包"
         android:textColor="#ea5858"
@@ -111,6 +112,7 @@
         android:layout_weight="1"
         android:gravity="center"
         android:paddingLeft="5dp"
+        android:visibility="gone"
         android:paddingRight="5dp"
         android:text="赠美团神券"
         android:background="@drawable/shape_rectangle18"
