--- a/app/src/main/res/layout/view_group_custom_scratch_card.xml
+++ b/app/src/main/res/layout/view_group_custom_scratch_card.xml
@@ -76,9 +76,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/close"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_height="107dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
