--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -39,25 +39,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/ivPicAreaImageUrl"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <TextView
+    <com.example.myapplication.recharge.widget.ScrrollTextViewCommentListBackground
         android:id="@+id/tvCommentList"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginBottom="5dp"
-        android:layout_weight="1"
-        android:background="@drawable/shape_recharge_commentlist"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="操作简单"
-        android:textColor="#fff8f6"
-        android:textSize="11sp"
-        app:layout_constraintBottom_toTopOf="@id/tvStockout"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <TextView
-        android:id="@+id/tvCommentListSecond"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginRight="9dp"
@@ -66,11 +49,12 @@
         android:background="@drawable/shape_recharge_commentlist_second"
         android:gravity="center"
         android:paddingLeft="5dp"
+        android:visibility="gone"
+        android:text="无货"
         android:paddingRight="5dp"
-        android:text="库存紧张"
         android:textColor="#fff8f6"
         android:textSize="11sp"
-        app:layout_constraintBottom_toTopOf="@id/tvCommentList"
+        app:layout_constraintBottom_toTopOf="@id/tvStockout"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
